Demo/Kubernetes/todolist-backend-main/todolist-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-backend-service
  namespace: todolist
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: todolist-backend
