Demo/Kubernetes/todolist-backend-main/todolist-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-backend-ingress
  namespace: todolist
spec:
  ingressClassName: nginx
  rules:
    - host: api-todolist.mixiyady.vn
      http:
        paths:
          - backend:
              service:
                name: todolist-backend-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
